objects/SLSI__SL_CustomizableComponent__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Used for updating certain CSS of WaterCooler Intranet Application.</description>
    <fields>
        <fullName>SLSI__Default_Font_Color__c</fullName>
        <label>Default Font Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLSI__Default_Font_Family__c</fullName>
        <label>Default Font Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLSI__Default_Font_Size__c</fullName>
        <label>Default Font Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLSI__Default__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLSI__Featured_Group_Highlight_Color__c</fullName>
        <label>Featured Group Highlight Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLSI__Footer_Background_Color__c</fullName>
        <label>Footer Background Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLSI__Footer_Text_Color__c</fullName>
        <label>Footer Text Color</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLSI__Footer__c</fullName>
        <description>Can be used , if admin want to change footer text on TWC page</description>
        <label>Footer Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLSI__Header_Background_Color__c</fullName>
        <label>Header Background Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLSI__Header_Text_Color__c</fullName>
        <label>Header Text Color</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLSI__Logo__c</fullName>
        <inlineHelpText>Please provide Document Id of respective image(logo) of size 200x44 for the Application.</inlineHelpText>
        <label>Logo</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLSI__Main_Background_Color__c</fullName>
        <label>Main Background Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLSI__Navigation_Bar_Color__c</fullName>
        <label>Navigation Bar Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLSI__Navigation_Bar_Font_Color__c</fullName>
        <label>Navigation Bar Font Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLSI__Navigation_Bar_Selected_Color__c</fullName>
        <label>Navigation Bar Selected Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLSI__Page_Headings_Color__c</fullName>
        <label>Page Headings Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLSI__Page_Headings_Font_Family__c</fullName>
        <label>Page Headings Font Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLSI__Page_Headings_Font_Size__c</fullName>
        <label>Page Headings Font Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLSI__Page_Records_Color__c</fullName>
        <label>Page Records Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLSI__Page_Records_Font_Family__c</fullName>
        <label>Page Records Font Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLSI__Page_Records_Font_Size__c</fullName>
        <label>Page Records Font Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLSI__Selected_Group_Color__c</fullName>
        <label>Selected Group Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLSI__ShowChat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ShowChat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLSI__Top_Bar_Background_Color__c</fullName>
        <label>Top Bar Background Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLSI__Updated_Static_Resource_Name__c</fullName>
        <label>Updated Static Resource Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SL_CustomizableComponent</label>
</CustomObject>